fix: spell checks